--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         "cordova-browser": "^5.0.3",
         "cordova-custom-config": "^5.0.2",
         "cordova-ios": "4.5.4",
-        "cordova-plugin-add-swift-support": "^1.7.2",
+        "cordova-plugin-add-swift-support": "git+https://github.com/akofman/cordova-plugin-add-swift-support.git",
         "cordova-plugin-datepicker": "^0.9.3",
         "cordova-plugin-device": "^2.0.1",
         "cordova-plugin-fingerprint-aio": "^1.3.4",
@@ -108,7 +108,8 @@
             "de.appplant.cordova.plugin.local-notification": {},
             "cordova.plugins.diagnostic": {},
             "cordova-custom-config": {},
-            "cordova-plugin-datepicker": {}
+            "cordova-plugin-datepicker": {},
+            "cordova-plugin-add-swift-support": {}
         },
         "platforms": [
             "android",
