--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "cordova-browser": "^5.0.3",
         "cordova-custom-config": "^5.0.2",
         "cordova-ios": "4.5.4",
+        "cordova-plugin-app-events": "git+https://github.com/katzer/cordova-plugin-app-event.git",
         "cordova-plugin-add-swift-support": "git+https://github.com/akofman/cordova-plugin-add-swift-support.git",
         "cordova-plugin-datepicker": "^0.9.3",
         "cordova-plugin-device": "^2.0.1",
@@ -104,6 +105,7 @@
             "cordova-plugin-device": {},
             "cordova-sqlcipher-adapter": {},
             "cordova-plugin-splashscreen": {},
+            "cordova-plugin-app-events": {},
             "cordova-plugin-fingerprint-aio": {},
             "de.appplant.cordova.plugin.local-notification": {},
             "cordova.plugins.diagnostic": {},
