--- a/package.json
+++ b/package.json
@@ -43,21 +43,21 @@
         "@types/jasminewd2": "~2.0.2",
         "@types/phonegap-plugin-push": "^2.1.2",
         "codelyzer": "^4.0.1",
-        "cordova-android": "^6.2.3",
         "cordova-browser": "^5.0.3",
         "cordova-custom-config": "^5.0.2",
         "cordova-ios": "4.5.4",
-        "cordova-plugin-app-events": "git+https://github.com/katzer/cordova-plugin-app-event.git",
         "cordova-plugin-add-swift-support": "git+https://github.com/akofman/cordova-plugin-add-swift-support.git",
+        "cordova-plugin-app-event": "git+https://github.com/katzer/cordova-plugin-app-event.git",
+        "cordova-plugin-app-events": "git+https://github.com/katzer/cordova-plugin-app-event.git",
         "cordova-plugin-datepicker": "^0.9.3",
-        "cordova-plugin-device": "^2.0.1",
-        "cordova-plugin-fingerprint-aio": "^1.3.4",
+        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-fingerprint-aio": "^1.3.8",
         "cordova-plugin-geolocation": "^4.0.1",
         "cordova-plugin-inappbrowser": "^2.0.2",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-whitelist": "^1.3.3",
         "cordova-sqlcipher-adapter": "^0.1.12-rc2",
-        "cordova.plugins.diagnostic": "^4.0.6",
+        "cordova.plugins.diagnostic": "^4.0.8",
         "core-js": "^2.4.1",
         "de.appplant.cordova.plugin.local-notification": "^0.8.5",
         "express": "4.16.2",
@@ -111,10 +111,10 @@
             "cordova.plugins.diagnostic": {},
             "cordova-custom-config": {},
             "cordova-plugin-datepicker": {},
-            "cordova-plugin-add-swift-support": {}
+            "cordova-plugin-add-swift-support": {},
+            "cordova-plugin-app-event": {}
         },
         "platforms": [
-            "android",
             "browser",
             "ios"
         ]
