--- a/package.json
+++ b/package.json
@@ -18,75 +18,73 @@
     },
     "dependencies": {
         "@angular/animations": "5.2.1",
-        "@angular/cdk": "^5.1.0",
-        "@angular/cli": "^1.7.1",
+        "@angular/cdk": "5.1.0",
+        "@angular/cli": "1.7.1",
         "@angular/common": "5.0.3",
         "@angular/compiler": "5.0.3",
         "@angular/compiler-cli": "5.0.3",
         "@angular/core": "5.0.3",
         "@angular/forms": "5.0.3",
         "@angular/http": "5.0.3",
-        "@angular/material": "^5.1.0",
+        "@angular/material": "5.1.0",
         "@angular/platform-browser": "5.0.3",
         "@angular/platform-browser-dynamic": "5.0.3",
         "@ionic-native/core": "4.4.0",
-        "@ionic-native/date-picker": "^4.6.0",
-        "@ionic-native/local-notifications": "^4.6.0",
-        "@ionic-native/splash-screen": "^4.4.0",
+        "@ionic-native/date-picker": "4.6.0",
+        "@ionic-native/local-notifications": "4.6.0",
+        "@ionic-native/splash-screen": "4.4.0",
         "@ionic-native/status-bar": "4.4.0",
-        "@ionic/app-scripts": "3.1.8",
-        "@ionic/cloud-angular": "^0.12.0",
+        "@ionic/cloud-angular": "0.12.0",
         "@ionic/storage": "2.1.3",
         "@ngrx/core": "1.2.0",
         "@ngrx/store": "4.1.1",
-        "@types/jasmine": "^2.8.6",
+        "@types/jasmine": "2.8.6",
         "@types/jasminewd2": "~2.0.2",
-        "@types/phonegap-plugin-push": "^2.1.2",
-        "codelyzer": "^4.0.1",
-        "cordova-browser": "^5.0.3",
-        "cordova-custom-config": "^5.0.2",
+        "@types/phonegap-plugin-push": "2.1.2",
+        "build": "0.1.4",
+        "codelyzer": "4.0.1",
+        "cordova-android": "6.2.3",
+        "cordova-browser": "5.0.3",
+        "cordova-custom-config": "5.0.2",
         "cordova-ios": "4.5.4",
         "cordova-plugin-add-swift-support": "git+https://github.com/akofman/cordova-plugin-add-swift-support.git",
-        "cordova-plugin-app-event": "git+https://github.com/katzer/cordova-plugin-app-event.git",
-        "cordova-plugin-app-events": "git+https://github.com/katzer/cordova-plugin-app-event.git",
-        "cordova-plugin-datepicker": "^0.9.3",
-        "cordova-plugin-device": "^2.0.2",
-        "cordova-plugin-fingerprint-aio": "^1.3.8",
-        "cordova-plugin-geolocation": "^4.0.1",
-        "cordova-plugin-inappbrowser": "^2.0.2",
-        "cordova-plugin-splashscreen": "^5.0.2",
-        "cordova-plugin-whitelist": "^1.3.3",
-        "cordova-sqlcipher-adapter": "^0.1.12-rc2",
-        "cordova.plugins.diagnostic": "^4.0.8",
-        "core-js": "^2.4.1",
-        "de.appplant.cordova.plugin.local-notification": "^0.8.5",
+        "cordova-plugin-app-event": "1.2.1",
+        "cordova-plugin-datepicker": "0.9.3",
+        "cordova-plugin-device": "2.0.1",
+        "cordova-plugin-geolocation": "4.0.1",
+        "cordova-plugin-inappbrowser": "2.0.2",
+        "cordova-plugin-splashscreen": "5.0.2",
+        "cordova-plugin-whitelist": "1.3.3",
+        "cordova-sqlcipher-adapter": "0.1.12-rc2",
+        "cordova.plugins.diagnostic": "4.0.6",
+        "core-js": "2.4.1",
         "express": "4.16.2",
         "gzippo": "0.2.0",
-        "ionic-angular": "^3.9.2",
-        "ionic-plugin-keyboard": "^2.2.1",
+        "ionic-angular": "3.9.2",
+        "ionic-plugin-keyboard": "2.2.1",
         "ionicons": "3.0.0",
         "jasmine": "2.5.3",
         "jasmine-core": "~2.8.0",
         "jasmine-spec-reporter": "~4.2.1",
-        "jasmine-ts": "^0.2.1",
+        "jasmine-ts": "0.2.1",
         "karma": "1.5.0",
         "karma-chrome-launcher": "2.0.0",
-        "karma-coverage-istanbul-reporter": "^1.2.1",
+        "karma-coverage-istanbul-reporter": "1.2.1",
         "karma-jasmine": "1.1.0",
         "karma-jasmine-html-reporter": "0.2.2",
-        "karma-remap-istanbul": "^0.6.0",
+        "karma-remap-istanbul": "0.6.0",
         "karma-sourcemap-loader": "0.3.7",
         "karma-webpack": "2.0.3",
         "morgan": "1.9.0",
-        "node-sass": "^4.8.3",
-        "phonegap-plugin-local-notification": "^1.0.1",
-        "phonegap-plugin-push": "^1.10.6",
-        "protractor": "~5.1.2",
+        "node-sass": "4.8.3",
+        "phonegap-plugin-local-notification": "1.0.1",
+        "phonegap-plugin-push": "1.10.6",
+        "protractor": "5.1.2",
         "rxjs": "5.5.2",
-        "shelljs": "^0.7.0",
+        "shelljs": "0.7.0",
         "sw-toolbox": "3.6.0",
-        "ts-node": "~4.1.0",
-        "tslint": "~5.9.1",
+        "ts-node": "4.1.0",
+        "tslint": "5.9.1",
         "typescript": "2.4.0",
         "zone.js": "0.8.19"
     },
@@ -105,18 +103,19 @@
             "cordova-plugin-device": {},
             "cordova-sqlcipher-adapter": {},
             "cordova-plugin-splashscreen": {},
-            "cordova-plugin-app-events": {},
-            "cordova-plugin-fingerprint-aio": {},
-            "de.appplant.cordova.plugin.local-notification": {},
+            "cordova-plugin-app-event": {},
             "cordova.plugins.diagnostic": {},
             "cordova-custom-config": {},
             "cordova-plugin-datepicker": {},
-            "cordova-plugin-add-swift-support": {},
-            "cordova-plugin-app-event": {}
+            "cordova-plugin-add-swift-support": {}
         },
         "platforms": [
+            "android",
             "browser",
             "ios"
         ]
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "3.1.10"
     }
 }
